apps/osixlab/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osixlab-frontend
  namespace: osixlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osixlab-frontend
  template:
    metadata:
      labels:
        app: osixlab-frontend
    spec:
      containers:
      - name: frontend
        image: registry.osixlab.com/osixlab/osixlab-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: registry-osixlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osixlab-backend
  namespace: osixlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osixlab-backend
  template:
    metadata:
      labels:
        app: osixlab-backend
    spec:
      containers:
      - name: backend
        image: registry.osixlab.com/osixlab/osixlab-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
      imagePullSecrets:
      - name: registry-osixlab
---
apiVersion: v1
kind: Service
metadata:
  name: osixlab-frontend
  namespace: osixlab
spec:
  selector:
    app: osixlab-frontend
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: osixlab-backend
  namespace: osixlab
spec:
  selector:
    app: osixlab-backend
  ports:
    - port: 80
      targetPort: 3001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osixlab
  namespace: osixlab
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-dns-issuer
    external-dns.alpha.kubernetes.io/hostname: osixlab.com
    external-dns.alpha.kubernetes.io/target: oasis.xenedium.com
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  ingressClassName: traefik
  rules:
  - host: osixlab.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: osixlab-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: osixlab-frontend
            port:
              number: 80
  tls:
  - hosts:
    - osixlab.com
    secretName: osixlab-tls
